# Monte-Carlo-Ising

./: .gitignore  CMakeLists.txt  README  data_file.json  grid.cpp  grid.h  main.cpp  python_json_test.py  utils.cpp
tests/: CMakeLists.txt  tests.cpp
